<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        app:cardBackgroundColor="#00FFFFFF"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szczegoly"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView2"/>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#FFFFFF"
          app:layout_constraintBottom_toBottomOf="@+id/textView2" app:layout_constraintTop_toTopOf="@+id/textView2"
          app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="100dp"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="25dp"/>

    <androidx.cardview.widget.CardView

            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:layout_marginTop="8dp"
            android:id="@+id/cardView6">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="#00FFFFFF"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_temperature_inside_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/imageView2"/>

            <TextView
                    android:text="@string/tempinside"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/tempinside" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

            <TextView
                    android:text="@string/n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tempinside"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            app:layout_constraintStart_toEndOf="@+id/cardView6"
            android:layout_marginStart="8dp"
            android:id="@+id/cardView7" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/cardView4" android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_pressure_gauge_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView3"/>

            <TextView
                    android:text="@string/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3" android:id="@+id/textView4"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/pressure"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

            <TextView
                    android:text="@string/n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4" android:id="@+id/pressure"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            android:id="@+id/cardView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/textView2" android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_humidity_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView4"/>

            <TextView
                    android:text="@string/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="@+id/imageView4" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" android:id="@+id/textView6"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/humidity"/>

            <TextView
                    android:text="@string/n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="@+id/imageView4" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/humidity"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            app:layout_constraintTop_toBottomOf="@+id/cardView6"
            app:layout_constraintStart_toStartOf="@+id/cardView6" android:id="@+id/cardView"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_hygrometer_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView5"/>

            <TextView
                    android:text="@string/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" android:id="@+id/textView7"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/rain"/>

            <TextView
                    android:text="@string/n_a"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/rain"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView7"
            app:layout_constraintStart_toStartOf="@+id/cardView7"
            app:layout_constraintTop_toTopOf="@+id/cardView" android:id="@+id/cardView2"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_wind_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView6"/>

            <TextView
                    android:text="@string/wind"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" android:id="@+id/textView8"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/wind"/>

            <TextView
                    android:text="@string/n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/wind"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="false"
            android:background="#00FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:foreground="@drawable/card_ripple"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView4" app:layout_constraintEnd_toEndOf="@+id/cardView4"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:src="@drawable/icons8_dew_point_100px"
                    android:layout_width="24dp"
                    android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView7"/>

            <TextView
                    android:text="@string/dewpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="@+id/imageView7" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" android:id="@+id/textView9"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/dewpoint"/>

            <TextView
                    android:text="@string/n_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="@+id/imageView7" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/dewpoint"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>